--- a/google_map_project/pubspec.yaml
+++ b/google_map_project/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   location: ^5.0.3
   flutter_polyline_points: ^2.0.0
+  geolocator: ^10.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
